# zip-rs

./: Cargo.toml  rustfmt.toml
examples/: extract.rs  file_info.rs  write_dir.rs
src/: cp437.rs  crc32.rs  lib.rs  read.rs  result.rs  spec.rs  types.rs  write.rs
tests/: end_to_end.rs  zip64_large.rs
