[package]

name = "zip"
version = "0.5.7"
authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
license = "MIT"
repository = "https://github.com/mvdnes/zip-rs.git"
documentation = "http://mvdnes.github.io/rust-docs/zip-rs/zip/index.html"
keywords = ["zip", "archive"]
description = """
Library to support the reading and writing of zip files.
"""
edition = "2018"

[dependencies]
flate2 = { version = "1.0.14", default-features = false, optional = true }
time = { version = "0.1.43", optional = true }
podio = "0.1.6"
bzip2 = { version = "0.3.3", optional = true }
crc32fast = "1.2.0"

[dev-dependencies]
bencher = "0.1"
rand = "0.7.3"
walkdir = "2.3.1"

[features]
deflate = ["flate2/rust_backend"]
deflate-miniz = ["flate2/default"]
deflate-zlib = ["flate2/zlib"]
default = ["bzip2", "deflate", "time"]

[[bench]]
name = "read_entry"
harness = false
